<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_sky">

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_result"
        android:textSize="@dimen/result_size"
        app:layout_constraintBottom_toTopOf="@id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/key_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/key_clear" />

        <Button
            android:id="@+id/key_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/key_percent" />

        <Button
            android:id="@+id/key_backspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/key_backspace" />

        <Button
            android:id="@+id/key_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/key_divide" />

        <Button
            android:id="@+id/key_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_1" />

        <Button
            android:id="@+id/key_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_2" />

        <Button
            android:id="@+id/key_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_3" />

        <Button
            android:id="@+id/key_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/key_multi" />

        <Button
            android:id="@+id/key_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_4" />

        <Button
            android:id="@+id/key_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_5" />

        <Button
            android:id="@+id/key_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_6" />

        <Button
            android:id="@+id/key_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/key_minus" />


        <Button
            android:id="@+id/key_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_7" />


        <Button
            android:id="@+id/key_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_8" />

        <Button
            android:id="@+id/key_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_9" />

        <Button
            android:id="@+id/key_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/teal_200"
            android:text="@string/key_plus" />

        <Button
            android:id="@+id/key_zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_0" />

        <Button
            android:id="@+id/key_comma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/key_dot" />

        <Button
            android:id="@+id/key_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_gravity="fill_horizontal"
            android:backgroundTint="@color/red"
            android:text="@string/key_equals" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>